# SIH2023-Project

./: .gitignore  .replit  README.md  pyproject.toml  replit.nix
hardware/: README.md  platformio.ini
hardware/src/Collection_Module/: Collection_Module.ino
hardware/src/Probe_Module/: Probe_Module.ino
hardware/src/UID_Generator/: Generator.py
webapp/: db_connector.py  db_connector.py.save  gunicorn.config.py  main.py  mqtt_handler.py  regex.py  runner.py  websocket_handler.py
webapp/static/css/: dashboard_style.css  find_device_style.css  login_style.css  profile_style.css  register_device_style.css  register_style.css
webapp/static/images/: dashboard_background.jfif
webapp/static/js/: dashboard.js  find_device_js.js  loader.js  login.js  register.js  register_device_js.js  tour.js
webapp/templates/: 404.html  csrf_error.html  dashboard.html  find_device.html  index.html  login.html  logout.html  profile.html  register.html  register_device.html
